Add G1 GC algorithm